--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,9 +31,9 @@
         "program": "run/main",
         "args": [],
         "stopAtEntry": false,
-        "cwd": "~/projects/tiramisu",
+        "cwd": "~/projects/tiramisu_arm",
         "sourceFileMap": {
-            "/home/access/projects/croissant": "${workspaceFolder}"
+            "/home/access/projects/tiramisu_arm": "${workspaceFolder}"
         },
         "environment": [],
         "externalConsole": true,
